--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 streamlit==1.28.0
-pandas==2.0.3
-numpy==1.24.3
-scikit-learn==1.3.0
-xgboost==1.7.6
-imbalanced-learn==0.10.1
-matplotlib==3.7.2
-seaborn==0.12.2
-plotly==5.15.0
-fastapi==0.104.1
-uvicorn==0.24.0
+pandas
+numpy
+scikit-learn
+xgboost
+imbalanced-learn
+matplotlib
+seaborn
+plotly
+fastapi
+uvicorn
+
